@@ -2,6 +2,7 @@ launchpad-buildd (116) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Remove obsolete BuilderStatus.ABORTED.
+  * Remove obsolete BuildDSlave.fetchFile method, unused since October 2005.
 
   [ Adam Conrad ]
   * Tidy up log formatting of the "Already reaped..." message. 
